--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 README 
 ======
 
-Readme for your plugin 
+A helper for IRS satellite adjustment. Use with WMS Plugin. Resulting files
+send to Komzpa (#osm-ru at irc.oftc.net).
 
-    * Plugin author and contact email address.
-    
-    * The license for your plugin source code. If you have no special preferences, 
-      you can pick the license that is used for JOSM ("GPL v2 or later").
-      
-    * Notes for future developers, if needed.
+http://forum.openstreetmap.org/viewtopic.php?id=6817
+
+Supported WMS is only (note force=nocorrect):
+
+http://irs.gis-lab.info/?layers=irs&force=nocorrect&
